[package]
name = "plrust-lib-example"
version = "0.0.1"
edition = "2021"

[lib]
# https://doc.rust-lang.org/reference/linkage.html
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dependencies]

pgrx = "=0.11.0"

[dev-dependencies]
pgrx-tests = "=0.11.0"
